fix: breadcrumb wrapping for long lines
[task] https://app.asana.com/0/537225826752670/782271380283957/f

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -276,6 +276,8 @@ html.rqf-page {
       li:last-of-type {
         width:auto;
         margin-right:5px;
+        word-wrap: normal;
+        white-space: inherit;
       }
       // Make third link read '...'
       li:nth-of-type(3) {
